add initial codes with validations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -53,3 +53,8 @@ spring.main.banner-mode=off
 
 # static resources
 # spring.web.resources.static-locations=classpath:/templates/
+
+# CUSTOM
+countries=United States,Canada,Japan,Australia,United Kingdom
+sex=Male,Female
+banks=Canadian Imperial Bank of Commerce,Royal Bank of Canada,Toronto-Dominion Bank,Bank Of Montreal,Scotiabank
