--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,8 +20,8 @@ spring.security.user.password=password
 logging.level.org.springframework=DEBUG
 # logging.level.org.hibernate=INFO
 logging.level.com.metamorph.spring=DEBUG
-# logging.level.org.hibernate.SQL=DEBUG
-# logging.level.org.hibernate.orm.jdbc.bind=TRACE
+logging.level.org.hibernate.SQL=TRACE
+logging.level.org.hibernate.orm.jdbc.bind=TRACE
 logging.level.root=WARN
 
 logging.file.name=myapp.log
