--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,11 +17,11 @@ spring.security.user.password=password
 
 # log levels severity mapping
 # types: TRACE, DEBUG, INFO, WARN, ERROR, FATAL, OFF
-logging.level.org.springframework=DEBUG
+logging.level.org.springframework=INFO
 # logging.level.org.hibernate=INFO
-logging.level.com.metamorph.spring=DEBUG
-logging.level.org.hibernate.SQL=TRACE
-logging.level.org.hibernate.orm.jdbc.bind=TRACE
+logging.level.com.metamorph.spring=INFO
+# logging.level.org.hibernate.SQL=TRACE
+# logging.level.org.hibernate.orm.jdbc.bind=TRACE
 logging.level.root=WARN
 
 logging.file.name=myapp.log
